[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulnfeed-mcp"
version = "0.3.5"
description = "Dependency vulnerability monitoring MCP server — knows your lockfile, prioritizes by EPSS exploit probability, recommends fix versions."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Novadyne", email = "support@novadyne.ai" }]
keywords = ["mcp", "mcp-server", "security", "vulnerability", "vulnerability-scanner", "cve", "epss", "dependency-scanning", "claude-code", "x402", "micropayments", "sbom", "supply-chain-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["mcp>=1.0"]

[project.scripts]
vulnfeed-mcp = "vulnfeed_mcp:main"

[project.urls]
Homepage = "https://vulnfeed.novadyne.ai"
Repository = "https://github.com/novadyne-hq/vulnfeed-mcp"
Issues = "https://github.com/novadyne-hq/vulnfeed-mcp/issues"
